Add texting logic to comment model (doesn't work though).

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
+Please don't use this information for evil. That'd be mean.
+
 TWILIO_ACCOUNT_SID=ACfc4175ce0ad759fabe1eec940e54f7c5
 TWILIO_AUTH_TOKEN=529a5017f43e313b2f526fcd7df757a3
