Fix sending sms bug by adding dot-env gem to gemfile.

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
-Please don't use this information for evil. That'd be mean.
-
 TWILIO_ACCOUNT_SID=ACfc4175ce0ad759fabe1eec940e54f7c5
 TWILIO_AUTH_TOKEN=529a5017f43e313b2f526fcd7df757a3
+USER_NUMBER=5412248928
+
+MAILGUN_ACCOUNT_KEY=key-7ff22201fa6d4f7a4dde25c813217dd9
+MAILGUN_ACCOUNT_DOMAIN=sandbox06332e1cab434064a52bccda8d90b5c4.mailgun.org
+
+Please don't use this information for evil. That'd be mean.
